testsuite/tests/interpreter_errors/struct_pattern/unknown_field/test.out
script.lkql:10:15: error: Struct "Pair" has no field "unknown"
  10 |     case Pair(unknown: _) => print("should raise error")
     |               ^^^^^^^^^^

